# ds-u2-actividad-1b-listasenlazadassimples-Mauricio130ggs

./: README.md
Entrega/: Doxyfile  README.txt  REPORTE_TECNICO.md
Entrega/codigo/: CMakeLists.txt  ListaSensor.h  Nodo.h  SensorBase.h  SensorPresion.h  SensorTemperatura.h  SerialPort.h  main.cpp  mainpage.dox
Entrega/docs/html/: index.html
Entrega/pantallazos/: INSTRUCCIONES.txt
