cmake_minimum_required(VERSION 3.10)

# Nombre del proyecto
project(SistemaIoTSensores VERSION 1.0)

# Especificar el est치ndar de C++
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)

# Agregar opciones de compilaci칩n
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")

# Definir el ejecutable
add_executable(SistemaIoT 
    main.cpp
)

# Incluir los archivos de encabezado
target_include_directories(SistemaIoT PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})

# Mensaje de configuraci칩n
message(STATUS "Configurando Sistema IoT de Sensores")
message(STATUS "Compilador: ${CMAKE_CXX_COMPILER}")
message(STATUS "Est치ndar C++: ${CMAKE_CXX_STANDARD}")
